--- a/seminar1/build.gradle
+++ b/seminar1/build.gradle
@@ -27,6 +27,13 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	// mysql
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	// security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
+
 	// H2 Database 추가
 	runtimeOnly 'com.h2database:h2'
 
