--- a/seminar1/src/main/resources/application-dev.yml
+++ b/seminar1/src/main/resources/application-dev.yml
@@ -12,4 +12,18 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
+
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 3MB
+      max-request-size: 5MB
+
+aws-property:
+  access-key: 123456677
+  secret-key: 123456782
+  region: ap-northeast-2
+
+jwt:
+  secret: jangchungdongwangjokbalbossam1234
